--- a/service.yaml
+++ b/service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: sample
-  name: sample
+    app: kubernetes-dashboard
+  name: kubernetes-dashboard
 spec:
   ports:
   - name: http
@@ -11,5 +11,5 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: sample
+    app: kubernetes-dashboard
   type: ClusterIP
